--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+</head>
+<body>
+  <h1>Привіт</h1>
+</body>
+</html>
