--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-    
+        <div class="menu">
+            <a href="index.html" class="logo">
+                <img src="img/logo.png" alt="" width="60">
+                LessonSchedule
+            </a>
+            <ul class="menu-list">
+                <li><a href="index.html" class="menu-link">Home</a></li>
+                <li><a href="contact.html" class="menu-link">Contact</a></li>
+            </ul>
+        </div>
     </header>
     <main>
     
