--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </main>
    
     <footer>
-    
+        <h4>LogikaSchool &copy; 2024</h4>
+        <a href="https://www.freepik.com/icon/time_5696866#fromView=search&page=1&position=3&uuid=ec140cdd-6295-4013-8cca-b46ebbbd7b9a">Icon by Freepik</a>
     </footer>
 </body>
 </html>
