--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div id="add-class">
                     <h3>Додати урок</h3>
                     <input type="text" id="new-class" placeholder="Назва уроку">
-                    <button id="add-class-button">Додати урок</button>
+                    <button class="add-class-button">Додати урок</button>
                 </div>
                 <div id="homework">
                     <h3>Домашка</h3>
