--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="diary" content="school-diary, initial-scale=1.0">
     <title>LessonSchedule</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTJNWLS5CW"></script>
